front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front-web
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
  type: NodePort
